--- a/shelter/index.html
+++ b/shelter/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="icon" type="image/png" href="./img/favicon.png">
+        <link rel="stylesheet" href="src/sass/style.css">
         <title>Shelter</title>
     </head>
     <body>
@@ -12,5 +14,6 @@
         </main>
         <footer class="footer">
         </footer>
+        <script src="src/js/index.js"></script>
     </body>
 </html>
