--- a/shelter/index.html
+++ b/shelter/index.html
@@ -9,10 +9,157 @@
     </head>
     <body>
         <header class="header">
+            <div class="wrapper header-wrapper">
+                <a href="#" class="header-logo">
+                    <p>Cozy House</p>
+                    <p>Shelter for pets in Boston</p>
+                </a>
+                <nav class="header-navigation" id="navigation"> 
+                    <ul>
+                        <li><a href="#about">About the shelter</a></li>
+                        <li><a href="#our-friends">Our pets</a></li>
+                        <li><a href="#help">Help the shelter</a></li>
+                        <li><a href="#contacts">Contacts</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
         <main class="main">
+            <section class="not-only" id="not-only">
+                <div class="wrapper not-only-wrapper">
+                    <div class="not-only-content">
+                        <h1>Not only people need a house</h1>  
+                        <p>
+                            We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
+                            He or she will love you more than anybody else in the world, you will see!
+                        </p>
+                        <button>Make a friend</button>
+                        <img src="./img/start-screen-puppy.png" alt="Start screen puppy">
+                    </div>
+                </div>
+            </section>
+            <section class="about" id="about">
+                <div class="wrapper about-wrapper">  
+                    <div class="about-content">
+                        <img src="./img/about-pets.png" alt="About pets">
+                        <h2>About the shelter “Cozy House”</h2>
+                        <p>
+                            Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. 
+                            The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
+                        </p>
+                        <p>
+                            We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. 
+                            We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. 
+                            Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.
+                        </p>
+                    </div>
+                </div>
+            </section>
+            <section class="our-friends" id="our-friends">
+                <div class="wrapper our-friends-wrapper">
+                    <div class="our-friends-content">
+                        <h2>Our friends who are looking for a house</h2>
+                        <div class="pet-block-card">
+                            <div class="pet-card">
+                                <img src="./img/our_friends/pets-katrine.png" alt="Katrine">
+                                <p>Katrine</p>
+                                <button>Learn more</button>
+                            </div>
+                            <div class="pet-card">
+                                <img src="./img/our_friends/pets-jennifer.png" alt="Jennife">
+                                <p>Jennifer</p>
+                                <button>Learn more</button>
+                            </div>
+                            <div class="pet-card">
+                                <img src="./img/our_friends/pets-woody.png" alt="Woody">
+                                <p>Woody</p>
+                                <button>Learn more</button>
+                            </div>
+                        </div>
+                        <button>Get to know the rest</button>
+                    </div>
+                </div>
+            </section>
+            <section class="help" id="help">
+                <div class="wrapper help-wrapper">  
+                    <div class="help-content">
+                        <h2>How you can help our shelter</h2>
+                        <div class="help-block-card">
+                            <div class="help-card">
+                                <img src="./img/help/pet-food.svg" alt="pet-food">
+                                <p>Pet food</p>
+                            </div>
+                            <div class="help-card">
+                                <img src="./img/help/transportation.svg" alt="Transportation">
+                                <p>Transportation</p>
+                            </div>
+                            <div class="help-card">
+                                <img src="./img/help/toys.svg" alt="Toys">
+                                <p>Toys</p>
+                            </div>
+                            <div class="help-card">
+                                <img src="./img/help/bowls-and-cups.svg" alt="Bowls and cups">
+                                <p>Bowls and cups</p>
+                            </div>
+                            <div class="help-card">
+                                <img src="./img/help/shampoos.svg" alt="Shampoos">
+                                <p>Shampoos</p>
+                            </div>
+                            <div class="help-card">
+                                <img src="./img/help/vitamins.svg" alt="Vitamins">
+                                <p>Vitamins</p>
+                            </div>
+                            <div class="help-card">
+                                <img src="./img/help/medicines.svg" alt="Medicines">
+                                <p>Medicines</p>
+                            </div>
+                            <div class="help-card">
+                                <img src="./img/help/collars-or-leashes.svg" alt="Collars or leashes">
+                                <p>Collars / leashes</p>
+                            </div>
+                            <div class="help-card">
+                                <img src="./img/help/sleeping-areas.svg" alt="Sleeping areas">
+                                <p>Sleeping areas</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="in-addition" id="in-addition">
+                <div class="wrapper in-addition-wrapper">  
+                    <div class="in-addition-content">
+                        <img src="./img/donation-dog.png" alt="Donation dog">
+                        <h2>You can also make a donation</h2>
+                        <p>
+                            Name of the bank / Type of bank account
+                        </p>
+                        <p>
+                            8380 2880 8028 8791 7435
+                        </p>
+                        <p>
+                            Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. 
+                            Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                        </p>
+                    </div>
+                </div>
+            </section>
         </main>
         <footer class="footer">
+            <div class="wrapper footer-wrapper">
+                <div class="in-addition-content">
+                    <div class="contacts">
+                        <p>For questions and suggestions</p>
+                        <p>email@shelter.com</p>
+                        <p>+13 674 567 75 54</p>
+                    </div>
+                    <div class="address">
+                        <p>We are waiting for your visit</p>
+                        <p>1 Central Street, Boston (entrance from the store)</p>
+                        <p>18 South Park, London</p>
+                    </div>
+                    <img src="./img/footer-puppy.png" alt="Footer puppy">
+                </div>
+            </div>
         </footer>
         <script src="src/js/index.js"></script>
     </body>
