--- a/shelter/index.html
+++ b/shelter/index.html
@@ -14,30 +14,34 @@
     <body>
         <header class="header">
             <div class="wrapper header-wrapper">
-                <a href="#" class="header-logo">
-                    <p>Cozy House</p>
-                    <p>Shelter for pets in Boston</p>
-                </a>
-                <nav class="header-navigation" id="navigation"> 
-                    <ul>
-                        <li><a href="#about">About the shelter</a></li>
-                        <li><a href="#our-friends">Our pets</a></li>
-                        <li><a href="#help">Help the shelter</a></li>
-                        <li><a href="#contacts">Contacts</a></li>
-                    </ul>
-                </nav>
+                <div class="header-content">
+                    <a href="#" class="header-logo">
+                        <p>Cozy House</p>
+                        <p>Shelter for pets in Boston</p>
+                    </a>
+                    <nav class="header-navigation" id="navigation"> 
+                        <ul>
+                            <li><a href="#about">About the shelter</a></li>
+                            <li><a href="#our-friends">Our pets</a></li>
+                            <li><a href="#help">Help the shelter</a></li>
+                            <li><a href="#contacts">Contacts</a></li>
+                        </ul>
+                    </nav>
+                </div>
             </div>
         </header>
         <main class="main">
             <section class="not-only" id="not-only">
                 <div class="wrapper not-only-wrapper">
                     <div class="not-only-content">
-                        <h1>Not only people need a house</h1>  
-                        <p>
-                            We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
-                            He or she will love you more than anybody else in the world, you will see!
-                        </p>
-                        <button>Make a friend</button>
+                        <div>
+                            <h1>Not only people need a house</h1>  
+                            <p>
+                                We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
+                                He or she will love you more than anybody else in the world, you will see!
+                            </p>
+                            <button class="button-type-1">Make a friend</button>
+                        </div>
                         <img src="./img/start-screen-puppy.png" alt="Start screen puppy">
                     </div>
                 </div>
@@ -46,48 +50,60 @@
                 <div class="wrapper about-wrapper">  
                     <div class="about-content">
                         <img src="./img/about-pets.png" alt="About pets">
-                        <h2>About the shelter “Cozy House”</h2>
-                        <p>
-                            Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. 
-                            The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
-                        </p>
-                        <p>
-                            We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. 
-                            We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. 
-                            Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.
-                        </p>
+                        <div>
+                            <h2>About the shelter “Cozy House”</h2>
+                            <p>
+                                Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. 
+                                The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
+                            </p>
+                            <p>
+                                We feed our wards with the best food and make sure that they do not get sick, feel comfortable (including psychologically) and well. 
+                                We are supported by 87 volunteers and 28 employees of various skill levels. About 12% of the animals are taken by the shelter staff. 
+                                Taking care of the animals, they become attached to the pets and would hardly ever leave them alone.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
             <section class="our-friends" id="our-friends">
                 <div class="wrapper our-friends-wrapper">
                     <div class="our-friends-content">
-                        <h2>Our friends who are looking for a house</h2>
-                        <div class="pet-block-card">
-                            <div class="pet-card">
-                                <img src="./img/our_friends/pets-katrine.png" alt="Katrine">
-                                <p>Katrine</p>
-                                <button>Learn more</button>
+                        <h2>
+                            Our friends who <br>
+                            are looking for a house
+                        </h2>
+                        <div class="switch-pet-block-card">
+                            <button class="button-type-3"></button>
+                            <div class="pet-block-card">
+                                <div class="pet-card">
+                                    <img src="./img/our_friends/pets-katrine.png" alt="Katrine">
+                                    <p>Katrine</p>
+                                    <button class="button-type-2">Learn more</button>
+                                </div>
+                                <div class="pet-card">
+                                    <img src="./img/our_friends/pets-jennifer.png" alt="Jennife">
+                                    <p>Jennifer</p>
+                                    <button class="button-type-2">Learn more</button>
+                                </div>
+                                <div class="pet-card">
+                                    <img src="./img/our_friends/pets-woody.png" alt="Woody">
+                                    <p>Woody</p>
+                                    <button class="button-type-2">Learn more</button>
+                                </div>
                             </div>
-                            <div class="pet-card">
-                                <img src="./img/our_friends/pets-jennifer.png" alt="Jennife">
-                                <p>Jennifer</p>
-                                <button>Learn more</button>
-                            </div>
-                            <div class="pet-card">
-                                <img src="./img/our_friends/pets-woody.png" alt="Woody">
-                                <p>Woody</p>
-                                <button>Learn more</button>
-                            </div>
+                            <button class="button-type-3"></button>
                         </div>
-                        <button>Get to know the rest</button>
+                        <button class="button-type-1">Get to know the rest</button>
                     </div>
                 </div>
             </section>
             <section class="help" id="help">
                 <div class="wrapper help-wrapper">  
                     <div class="help-content">
-                        <h2>How you can help our shelter</h2>
+                        <h2>
+                            How you can help <br>
+                            our shelter
+                        </h2>
                         <div class="help-block-card">
                             <div class="help-card">
                                 <img src="./img/help/pet-food.svg" alt="pet-food">
@@ -133,31 +149,33 @@
                 <div class="wrapper in-addition-wrapper">  
                     <div class="in-addition-content">
                         <img src="./img/donation-dog.png" alt="Donation dog">
-                        <h2>You can also make a donation</h2>
-                        <p>
-                            Name of the bank / Type of bank account
-                        </p>
-                        <p>
-                            8380 2880 8028 8791 7435
-                        </p>
-                        <p>
-                            Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. 
-                            Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                        </p>
+                        <div>
+                            <h2>You can also make a donation</h2>
+                            <p>
+                                Name of the bank / Type of bank account
+                            </p>
+                            <p>
+                                8380 2880 8028 8791 7435
+                            </p>
+                            <p>
+                                Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. 
+                                Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
         </main>
-        <footer class="footer">
+        <footer class="footer" id="contacts">
             <div class="wrapper footer-wrapper">
-                <div class="in-addition-content">
+                <div class="footer-content">
                     <div class="contacts">
-                        <p>For questions and suggestions</p>
+                        <h2>For questions and suggestions</h2>
                         <p>email@shelter.com</p>
                         <p>+13 674 567 75 54</p>
                     </div>
                     <div class="address">
-                        <p>We are waiting for your visit</p>
+                        <h2>We are waiting for your visit</h2>
                         <p>1 Central Street, Boston (entrance from the store)</p>
                         <p>18 South Park, London</p>
                     </div>
