--- a/shelter/index.html
+++ b/shelter/index.html
@@ -22,7 +22,7 @@
                     <nav class="header-navigation" id="navigation"> 
                         <ul>
                             <li><a href="#about">About the shelter</a></li>
-                            <li><a href="#our-friends">Our pets</a></li>
+                            <li><a href="./pets.html">Our pets</a></li>
                             <li><a href="#help">Help the shelter</a></li>
                             <li><a href="#contacts">Contacts</a></li>
                         </ul>
@@ -47,7 +47,7 @@
                 </div>
             </section>
             <section class="about" id="about">
-                <div class="wrapper about-wrapper">  
+                <div class="wrapper about-wrapper">
                     <div class="about-content">
                         <img src="./img/about-pets.png" alt="About pets">
                         <div>
