--- a/shelter/index.html
+++ b/shelter/index.html
@@ -9,13 +9,13 @@
         <link rel="preload" href="./fonts/arial-bold.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="./fonts/georgia.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="./fonts/georgia-bold.woff2" as="font" type="font/woff2" crossorigin>
-        <title>Shelter</title>
+        <title>Main</title>
     </head>
     <body>
         <header class="header">
             <div class="wrapper header-wrapper">
                 <div class="header-content">
-                    <a href="#" class="header-logo">
+                    <a href="#no-scroll" class="header-logo">
                         <p>Cozy House</p>
                         <p>Shelter for pets in Boston</p>
                     </a>
@@ -40,7 +40,7 @@
                                 We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
                                 He or she will love you more than anybody else in the world, you will see!
                             </p>
-                            <button class="button-type-1">Make a friend</button>
+                            <a href="#our-friends" class="button-type-1">Make a friend</a>
                         </div>
                         <img src="./img/start-screen-puppy.png" alt="Start screen puppy">
                     </div>
@@ -93,7 +93,7 @@
                             </div>
                             <button class="button-type-3"></button>
                         </div>
-                        <button class="button-type-1">Get to know the rest</button>
+                        <a href="./pets.html" class="button-type-1">Get to know the rest</a> 
                     </div>
                 </div>
             </section>
@@ -154,9 +154,11 @@
                             <p>
                                 Name of the bank / Type of bank account
                             </p>
-                            <p>
-                                8380 2880 8028 8791 7435
-                            </p>
+                            <a href="#no-scroll">
+                                <p>
+                                    8380 2880 8028 8791 7435
+                                </p>
+                            </a>
                             <p>
                                 Legal information and lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas a ipsum at libero sagittis dignissim sed ac diam. 
                                 Praesent ultrices maximus tortor et vulputate. Interdum et malesuada fames ac ante ipsum primis in faucibus.
@@ -171,13 +173,21 @@
                 <div class="footer-content">
                     <div class="contacts">
                         <h2>For questions and suggestions</h2>
-                        <p>email@shelter.com</p>
-                        <p>+13 674 567 75 54</p>
+                        <a href="mailto:email@shelter.com">
+                            <p>email@shelter.com</p>
+                        </a>  
+                        <a href="tel:+136745677554">
+                            <p>+13 674 567 75 54</p>
+                        </a>
                     </div>
                     <div class="address">
                         <h2>We are waiting for your visit</h2>
-                        <p>1 Central Street, Boston (entrance from the store)</p>
-                        <p>18 South Park, London</p>
+                        <a href="https://goo.gl/maps/oZSFtpk3vyzmTkUA7" target="_blank">
+                            <p>1 Central Street, Boston (entrance from the store)</p>
+                        </a>
+                        <a href="https://goo.gl/maps/fNZKVs9MFVncT6bi7" target="_blank">
+                            <p>18 South Park, London</p>
+                        </a>
                     </div>
                     <img src="./img/footer-puppy.png" alt="Footer puppy">
                 </div>
