--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -9,13 +9,13 @@
         <link rel="preload" href="./fonts/arial-bold.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="./fonts/georgia.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="./fonts/georgia-bold.woff2" as="font" type="font/woff2" crossorigin>
-        <title>Shelter</title>
+        <title>Pets</title>
     </head>
     <body>
         <header class="header-pets">
             <div class="wrapper header-wrapper">
                 <div class="header-pets-content">
-                    <a href="#" class="header-pets-logo">
+                    <a href="./index.html" class="header-pets-logo">
                         <p>Cozy House</p>
                         <p>Shelter for pets in Boston</p>
                     </a>
@@ -23,7 +23,7 @@
                         <ul>
                             <li><a href="./index.html">About the shelter</a></li>
                             <li><a href="#our-friends">Our pets</a></li>
-                            <li><a href="#help">Help the shelter</a></li>
+                            <li><a href="./index.html#help">Help the shelter</a></li>
                             <li><a href="#contacts">Contacts</a></li>
                         </ul>
                     </nav>
@@ -34,10 +34,10 @@
             <section class="our-friends-pets" id="our-friends">
                 <div class="wrapper our-friends-wrapper">
                     <div class="our-friends-pets-content">
-                        <h2>
+                        <h1>
                             Our friends who <br>
                             are looking for a house
-                        </h2>
+                        </h1>
                         <div class="pet-block-card-pets">
                             <div class="pet-card-pets">
                                 <img src="./img/our_friends/pets-katrine.png" alt="Katrine">
@@ -96,13 +96,21 @@
                 <div class="footer-content">
                     <div class="contacts">
                         <h2>For questions and suggestions</h2>
-                        <p>email@shelter.com</p>
-                        <p>+13 674 567 75 54</p>
+                        <a href="mailto:email@shelter.com">
+                            <p>email@shelter.com</p>
+                        </a>  
+                        <a href="tel:+136745677554">
+                            <p>+13 674 567 75 54</p>
+                        </a>
                     </div>
                     <div class="address">
                         <h2>We are waiting for your visit</h2>
-                        <p>1 Central Street, Boston (entrance from the store)</p>
-                        <p>18 South Park, London</p>
+                        <a href="https://goo.gl/maps/oZSFtpk3vyzmTkUA7" target="_blank">
+                            <p>1 Central Street, Boston (entrance from the store)</p>
+                        </a>
+                        <a href="https://goo.gl/maps/fNZKVs9MFVncT6bi7" target="_blank">
+                            <p>18 South Park, London</p>
+                        </a>
                     </div>
                     <img src="./img/footer-puppy.png" alt="Footer puppy">
                 </div>
