--- a/shelter/index.html
+++ b/shelter/index.html
@@ -5,10 +5,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="icon" type="image/png" href="./img/favicon.png">
         <link rel="stylesheet" href="src/sass/style.css">
-        <link rel="preload" href="./fonts/arial.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="preload" href="./fonts/arial-bold.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="preload" href="./fonts/georgia.woff2" as="font" type="font/woff2" crossorigin>
-        <link rel="preload" href="./fonts/georgia-bold.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="prefetch" href="./fonts/arial.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="prefetch" href="./fonts/arial-bold.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="prefetch" href="./fonts/georgia.woff2" as="font" type="font/woff2" crossorigin>
+        <link rel="prefetch" href="./fonts/georgia-bold.woff2" as="font" type="font/woff2" crossorigin>
         <title>Main</title>
     </head>
     <body>
