feat: add adaptive layout for tablet and mobile

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -23,6 +23,11 @@
                             <li><a href="#contacts">Contacts</a></li>
                         </ul>
                     </nav>
+                    <div class="header-hamburger">
+                        <span class="header-hamburger-line"></span>
+                        <span class="header-hamburger-line"></span>
+                        <span class="header-hamburger-line"></span>
+                    </div>
                 </div>
             </div>
         </header>
@@ -31,7 +36,10 @@
                 <div class="wrapper not-only-wrapper">
                     <div class="not-only-content">
                         <div>
-                            <h1>Not only people need a house</h1>  
+                            <h1>
+                                Not only people <br> 
+                                need a house
+                            </h1>  
                             <p>
                                 We offer to give a chance to a little and nice puppy with an extremely wide and open heart.
                                 He or she will love you more than anybody else in the world, you will see!
@@ -47,7 +55,10 @@
                     <div class="about-content">
                         <img src="./img/about-pets.png" alt="About pets">
                         <div>
-                            <h2>About the shelter “Cozy House”</h2>
+                            <h2>
+                                About the shelter <br> 
+                                “Cozy House”
+                            </h2>
                             <p>
                                 Currently we have 121 dogs and 342 cats on our hands and statistics show that only 20% of them will find a family. 
                                 The others will continue to live with us and will be waiting for a lucky chance to become dearly loved.
@@ -146,7 +157,10 @@
                     <div class="in-addition-content">
                         <img src="./img/donation-dog.png" alt="Donation dog">
                         <div>
-                            <h2>You can also make a donation</h2>
+                            <h2>
+                                You can also <br>
+                                make a donation
+                            </h2>
                             <p>
                                 Name of the bank / Type of bank account
                             </p>
