--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -23,6 +23,11 @@
                             <li><a href="#contacts">Contacts</a></li>
                         </ul>
                     </nav>
+                    <div class="header-hamburger">
+                        <span class="header-hamburger-line"></span>
+                        <span class="header-hamburger-line"></span>
+                        <span class="header-hamburger-line"></span>
+                    </div>
                 </div>
             </div>
         </header>
