--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -23,10 +23,10 @@
                             <li><a href="#contacts">Contacts</a></li>
                         </ul>
                     </nav>
-                    <div class="header-hamburger">
-                        <span class="header-hamburger-line"></span>
-                        <span class="header-hamburger-line"></span>
-                        <span class="header-hamburger-line"></span>
+                    <div class="header-pets-hamburger">
+                        <span class="header-pets-hamburger-line"></span>
+                        <span class="header-pets-hamburger-line"></span>
+                        <span class="header-pets-hamburger-line"></span>
                     </div>
                 </div>
             </div>
