--- a/shelter/index.html
+++ b/shelter/index.html
@@ -7,8 +7,9 @@
         <link rel="stylesheet" href="src/sass/style.css">
         <title>Main</title>
     </head>
-    <body>
+    <body class="scroll">
         <header class="header">
+            <div class="header-overlay"></div>
             <div class="wrapper header-wrapper">
                 <div class="header-content">
                     <a href="#no-scroll" class="header-logo">
@@ -23,7 +24,7 @@
                             <li><a href="#contacts">Contacts</a></li>
                         </ul>
                     </nav>
-                    <div class="header-hamburger">
+                    <div class="header-hamburger" onclick="dropHamburgerMenu()">
                         <span class="header-hamburger-line"></span>
                         <span class="header-hamburger-line"></span>
                         <span class="header-hamburger-line"></span>
