--- a/shelter/index.html
+++ b/shelter/index.html
@@ -18,7 +18,7 @@
                     </a>
                     <nav class="header-navigation" id="navigation"> 
                         <ul>
-                            <li><a href="#about">About the shelter</a></li>
+                            <li><a href="#no-scroll">About the shelter</a></li>
                             <li><a href="./pets.html">Our pets</a></li>
                             <li><a href="#help">Help the shelter</a></li>
                             <li><a href="#contacts">Contacts</a></li>
