--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -7,8 +7,9 @@
         <link rel="stylesheet" href="src/sass/style.css">
         <title>Pets</title>
     </head>
-    <body>
+    <body class="scroll-pets">
         <header class="header-pets">
+            <div class="header-pets-overlay"></div>
             <div class="wrapper header-wrapper">
                 <div class="header-pets-content">
                     <a href="./index.html" class="header-pets-logo">
@@ -18,12 +19,12 @@
                     <nav class="header-pets-navigation" id="navigation"> 
                         <ul>
                             <li><a href="./index.html">About the shelter</a></li>
-                            <li><a href="#our-friends">Our pets</a></li>
+                            <li><a href="#no-scroll">Our pets</a></li>
                             <li><a href="./index.html#help">Help the shelter</a></li>
                             <li><a href="#contacts">Contacts</a></li>
                         </ul>
                     </nav>
-                    <div class="header-pets-hamburger">
+                    <div class="header-pets-hamburger" onclick="dropHamburgerMenuPets()">
                         <span class="header-pets-hamburger-line"></span>
                         <span class="header-pets-hamburger-line"></span>
                         <span class="header-pets-hamburger-line"></span>
@@ -117,6 +118,6 @@
                 </div>
             </div>
         </footer>
-        <script src="src/js/index.js"></script>
+        <script src="src/js/pets.js"></script>
     </body>
 </html>
