feat: implement carousel on the main page

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -81,25 +81,11 @@
                             are looking for a house
                         </h2>
                         <div class="switch-pet-block-card">
-                            <button class="button-type-3"></button>
-                            <div class="pet-block-card">
-                                <div class="pet-card">
-                                    <img src="./img/our_friends/pets-katrine.png" alt="Katrine">
-                                    <p>Katrine</p>
-                                    <button class="button-type-2">Learn more</button>
-                                </div>
-                                <div class="pet-card">
-                                    <img src="./img/our_friends/pets-jennifer.png" alt="Jennife">
-                                    <p>Jennifer</p>
-                                    <button class="button-type-2">Learn more</button>
-                                </div>
-                                <div class="pet-card">
-                                    <img src="./img/our_friends/pets-woody.png" alt="Woody">
-                                    <p>Woody</p>
-                                    <button class="button-type-2">Learn more</button>
-                                </div>
+                            <button class="button-type-3" id="arrow-left"></button>
+                            <div class="pet-block-card-wrapper" id="karusel-wrapper">
+                                <div class="pet-block-card" id="karusel"></div>
                             </div>
-                            <button class="button-type-3"></button>
+                            <button class="button-type-3" id="arrow-right"></button>
                         </div>
                         <a href="./pets.html" class="button-type-1">Get to know the rest</a> 
                     </div>
