feat: implement pagination on pets page

--- a/shelter/pets.html
+++ b/shelter/pets.html
@@ -40,54 +40,13 @@
                             Our friends who <br>
                             are looking for a house
                         </h1>
-                        <div class="pet-block-card-pets">
-                            <div class="pet-card-pets">
-                                <img src="./img/our_friends/pets-katrine.png" alt="Katrine">
-                                <p>Katrine</p>
-                                <button class="button-type-2">Learn more</button>
-                            </div>
-                            <div class="pet-card-pets">
-                                <img src="./img/our_friends/pets-jennifer.png" alt="Jennife">
-                                <p>Jennifer</p>
-                                <button class="button-type-2">Learn more</button>
-                            </div>
-                            <div class="pet-card-pets">
-                                <img src="./img/our_friends/pets-woody.png" alt="Woody">
-                                <p>Woody</p>
-                                <button class="button-type-2">Learn more</button>
-                            </div>
-                            <div class="pet-card-pets">
-                                <img src="./img/our_friends/pets-sophia.png" alt="Sophia">
-                                <p>Sophia</p>
-                                <button class="button-type-2">Learn more</button>
-                            </div>
-                            <div class="pet-card-pets">
-                                <img src="./img/our_friends/pets-timmy.png" alt="Timmy">
-                                <p>Timmy</p>
-                                <button class="button-type-2">Learn more</button>
-                            </div>
-                            <div class="pet-card-pets">
-                                <img src="./img/our_friends/pets-charly.png" alt="Charly">
-                                <p>Charly</p>
-                                <button class="button-type-2">Learn more</button>
-                            </div>
-                            <div class="pet-card-pets">
-                                <img src="./img/our_friends/pets-scarlett.png" alt="Scarlett">
-                                <p>Scarlett</p>
-                                <button class="button-type-2">Learn more</button>
-                            </div>
-                            <div class="pet-card-pets">
-                                <img src="./img/our_friends/pets-freddie.png" alt="Freddie">
-                                <p>Freddie</p>
-                                <button class="button-type-2">Learn more</button>
-                            </div>
-                        </div>
+                        <div class="pet-block-card-pets" id="pet-block"></div>
                         <div class="switch-block-pets">
-                            <button class="button-type-3">&#60;&#60;</button>
-                            <button class="button-type-3">&#60;</button>
-                            <button class="button-type-3">1</button>
-                            <button class="button-type-3">&#62;</button>
-                            <button class="button-type-3">&#62;&#62;</button>
+                            <button class="button-type-3" id="double-arrow-left">&#60;&#60;</button>
+                            <button class="button-type-3" id="arrow-left">&#60;</button>
+                            <button class="button-type-3" id="page">1</button>
+                            <button class="button-type-3" id="arrow-right">&#62;</button>
+                            <button class="button-type-3" id="double-arrow-right">&#62;&#62;</button>
                         </div>
                     </div>
                 </div>
