feat: implement pop-up for both pages

--- a/shelter/index.html
+++ b/shelter/index.html
@@ -33,6 +33,30 @@
             </div>
         </header>
         <main class="main">
+            <div class="pop-up-overlay" id="pop-up-overlay">
+                <div class="pop-up-modal" id="pop-up-modal">
+                    <button class="button-type-3" id="pop-up-close"></button>
+                    <img src="./img/our_friends/pets-jennifer.png" alt="pets-jennifer">
+                    <div class="pop-up-content" id="pop-up-content">
+                        <h2>Jennifer</h2>
+                        <h3>Dog - Labrador</h3>
+                        <p>
+                            Jennifer is a sweet 2 months old Labrador that 
+                            is patiently waiting to find a new forever home. 
+                            This girl really enjoys being able to go outside 
+                            to run and play, but won't hesitate to play up a 
+                            storm in the house if she has all of her favorite 
+                            toys.
+                        </p>
+                        <ul>
+                            <li><span>Age:</span> 2 month</li>
+                            <li><span>Inoculations:</span> none</li>
+                            <li><span>Diseases:</span> none</li>
+                            <li><span>Parasites:</span> none</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
             <section class="not-only" id="not-only">
                 <div class="wrapper not-only-wrapper">
                     <div class="not-only-content">
